--- a/src/main/resources/static/web/css/style.css
+++ b/src/main/resources/static/web/css/style.css
@@ -64,7 +64,7 @@
 }
 
 .index-body {
-    background-image: url(../img/avila.jpg);
+    background-image: url(../img/mindhub.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
